--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tell:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -40,7 +40,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <!-- <h2>Advantages</h2> -->
+        <h2>Our Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
